Resolve conflito aplicando stash em horas.html

--- a/templates/components/_header.html
+++ b/templates/components/_header.html
@@ -157,11 +157,11 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav" style="width:100%;">
 
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="{% url 'lembretes' %}">
                             <i class="bi bi-grid-fill"></i> Painel
                         </a>
-                    </li>
+                    </li>-->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdownAcompanhamento" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                          <i class="bi bi-ticket-perforated-fill"></i> Ticket
