--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         body {
             background-color: #45494E; /* Cor de fundo cinza mais escuro */
             color: #f2f4f7; /* Cor do texto */
-            background-image: url("{% static 'logo-golden.png' %}");  /* Caminho da imagem de fundo */
+            /*background-image: url("{% static 'logo-golden.png' %}");  /* Caminho da imagem de fundo */
             background-repeat: no-repeat;
             background-size: contain; /* Ajusta a imagem para caber na tela */
             background-position: center; /* Centraliza a imagem */
